feat: LRU implementation finish